remodel/k8s/apps/media/arr/torrent/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: torrent-http-route
  namespace: arr
spec:
  parentRefs:
    - name: euclid
      namespace: gateway
  hostnames:
    - "torrent.euclid.stonegarden.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: torrent-web
          port: 80
